# civ

./: .gitignore  CMakeLists.txt  README.md  civ.syms.toml  gen_stubs.py  remove_dupes.py  remove_stubs.py
RecompiledFuncs/: civ_aliases.c  civ_impl.c
include/hal/: input.h  timer.h  video.h
include/platform/: sdl_platform.h
include/recomp/: cpu.h  dos_compat.h
src/: main.c
src/hal/: input.c  timer.c  video.c
src/platform/: font8x8.h  sdl_platform.c
src/recomp/: cpu.c  dos_compat.c  startup.c
tools/: CMakeLists.txt
tools/mzparse/: CMakeLists.txt  mzparse.c
tools/ovldump/: CMakeLists.txt  ovldump.c
tools/picdecode/: CMakeLists.txt  picdecode.c
tools/recomp/: analyze.py  decode16.py  lift.py  lift_from_dump.py  map_thunks.py  map_thunks2.py  parse_overlays.py  recomp.py  resolve_stubs.py
